force-app/main/default/objects/Case/fields/Relevant_Loaders__c.field-meta.xml
<CustomField>
    <fullName>Relevant_Loaders__c</fullName>
    <label>Relevant Loaders</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AR Disputes Loader - SSCL</fullName>
            </value>
            <value>
                <fullName>AR Notes Loader</fullName>
            </value>
            <value>
                <fullName>Banks and Branches Loader</fullName>
            </value>
            <value>
                <fullName>Banks and Branches Loader - UWS</fullName>
            </value>
            <value>
                <fullName>CE Bank Statement Loader</fullName>
            </value>
            <value>
                <fullName>CE Bank Statements Direct - Orion</fullName>
            </value>
            <value>
                <fullName>Create Update Menus - HDR</fullName>
            </value>
            <value>
                <fullName>Create Update Responsibilities - HDR</fullName>
            </value>
            <value>
                <fullName>EAM Work Management Loader</fullName>
            </value>
            <value>
                <fullName>Engineering Change Order Loader</fullName>
            </value>
            <value>
                <fullName>FND Flex Values Loader</fullName>
            </value>
            <value>
                <fullName>FND Menus Loader</fullName>
            </value>
            <value>
                <fullName>FND Profile Option Values Loader</fullName>
            </value>
            <value>
                <fullName>FND Responsibilities Loader</fullName>
            </value>
            <value>
                <fullName>FND User Loader</fullName>
            </value>
            <value>
                <fullName>GL Daily Rates Loader</fullName>
            </value>
            <value>
                <fullName>GL Daily Rates - Orion</fullName>
            </value>
            <value>
                <fullName>GL Period Rates - Orion</fullName>
            </value>
            <value>
                <fullName>HR Jobs and Valid Grades - Experian</fullName>
            </value>
            <value>
                <fullName>HR Jobs Loader</fullName>
            </value>
            <value>
                <fullName>HR Organization Loader - ADIA</fullName>
            </value>
            <value>
                <fullName>HR Organizations - Experian</fullName>
            </value>
            <value>
                <fullName>HR Position Loader - ADIA</fullName>
            </value>
            <value>
                <fullName>HR Positions - Experian</fullName>
            </value>
            <value>
                <fullName>IB Install Base - Sonus</fullName>
            </value>
            <value>
                <fullName>IB System Install Base - Sonus</fullName>
            </value>
            <value>
                <fullName>Install Base Loader</fullName>
            </value>
            <value>
                <fullName>INV Physical Stock Take Loader</fullName>
            </value>
            <value>
                <fullName>iSupplier User Loader</fullName>
            </value>
            <value>
                <fullName>Labor Cost Rate Loader</fullName>
            </value>
            <value>
                <fullName
        >M4A- Custom Project Approval Lists - Noble Energy</fullName>
                <label>M4A- Custom Project Approval Lists - Noble Energy</label>
            </value>
            <value>
                <fullName>M4A- Custom Project Routing – Noble Energy</fullName>
            </value>
            <value>
                <fullName>New Loader (Temp)</fullName>
            </value>
            <value>
                <fullName>OPM Master Data Loader</fullName>
            </value>
            <value>
                <fullName>OTL Timecard Loader - CITCO</fullName>
            </value>
            <value>
                <fullName>PA Labor Cost Rate Loader</fullName>
            </value>
            <value>
                <fullName>PA Unassigned Asset Lines Loader</fullName>
            </value>
            <value>
                <fullName>PM Lease Loader</fullName>
            </value>
            <value>
                <fullName>Project Contracts DTS Loader - AAI</fullName>
            </value>
            <value>
                <fullName>Rate Schedules - Financial Plan Settings</fullName>
            </value>
            <value>
                <fullName>Rate Schedules - Financial Settings</fullName>
            </value>
            <value>
                <fullName>Rate Schedules - Workplan Settings</fullName>
            </value>
            <value>
                <fullName>Resource List Members Loader</fullName>
            </value>
            <value>
                <fullName>Supplier VAT Registration Loader</fullName>
            </value>
            <value>
                <fullName>Timecard Loader - Brand Energy</fullName>
            </value>
            <value>
                <fullName>User Management Roles Loader</fullName>
            </value>
            <value>
                <fullName>UserMgmt Roles and Responsibilities - HDR</fullName>
            </value>
            <value>
                <fullName>WIP Discrete Job</fullName>
            </value>
            <value>
                <fullName>WIP Loader</fullName>
            </value>
            <value>
                <fullName>WIP Move Transaction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>