force-app/main/default/objects/Case/fields/Relevant_Wizards__c.field-meta.xml
<CustomField>
    <fullName>Relevant_Wizards__c</fullName>
    <label>Relevant Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agreement &amp; Funding Wizard</fullName>
            </value>
            <value>
                <fullName>AP Invoice Wizard</fullName>
            </value>
            <value>
                <fullName>Application Interface Wizard</fullName>
            </value>
            <value>
                <fullName>AR Invoice API Wizard</fullName>
            </value>
            <value>
                <fullName>AR Invoice Wizard</fullName>
            </value>
            <value>
                <fullName>AR Receipt Wizard</fullName>
            </value>
            <value>
                <fullName>Asset Wizard</fullName>
            </value>
            <value>
                <fullName>Bill of Materials Wizard</fullName>
            </value>
            <value>
                <fullName>Budget Wizard</fullName>
            </value>
            <value>
                <fullName>Customer Wizard</fullName>
            </value>
            <value>
                <fullName>Custom Query / Downloader</fullName>
            </value>
            <value>
                <fullName>Element Entry Wizard</fullName>
            </value>
            <value>
                <fullName>Employee Wizard</fullName>
            </value>
            <value>
                <fullName>Enterprise Asset Management</fullName>
            </value>
            <value>
                <fullName>Event Wizard</fullName>
            </value>
            <value>
                <fullName>Excel-Out</fullName>
            </value>
            <value>
                <fullName>Formula Wizard</fullName>
            </value>
            <value>
                <fullName>GL Wand</fullName>
            </value>
            <value>
                <fullName>GL Wizard</fullName>
            </value>
            <value>
                <fullName>Intelligent AP Invoice Capture</fullName>
            </value>
            <value>
                <fullName>Invoice Approval Workflow</fullName>
            </value>
            <value>
                <fullName>Item Catalog UDA Wizard</fullName>
            </value>
            <value>
                <fullName>Item Cost Wizard</fullName>
            </value>
            <value>
                <fullName>Item Extension Wizard</fullName>
            </value>
            <value>
                <fullName>Item Wizard</fullName>
            </value>
            <value>
                <fullName>Labor Cost Rate Wizard</fullName>
            </value>
            <value>
                <fullName>Mail-It</fullName>
            </value>
            <value>
                <fullName>Material Transaction Wizard</fullName>
            </value>
            <value>
                <fullName>Meter Reader Wizard</fullName>
            </value>
            <value>
                <fullName>Mobile Inventory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>