force-app/main/default/objects/Case/fields/Resolution_Date__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Date__c</fullName>
    <description
  >Actual date the case was updated with the ultimate resolution - applicable for &apos;Product Issues&apos; and &apos;Installation Issues&apos; cases</description>
    <inlineHelpText
  >Actual date the case was updated with the ultimate resolution - applicable for &apos;Product Issues&apos; and &apos;Installation Issues&apos; cases.

Analysts to manually enter/check this value when closing the case. 

This date will be used for KPI reporting purposes.</inlineHelpText>
    <label>Resolution Date</label>
    <type>Date</type>
</CustomField>