force-app/main/default/objects/Case/fields/Send_New_Case_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_New_Case_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >This will send a New Case email to the Customer/Contact for all manually created Cases.</description>
    <label>Send New Case Email</label>
    <type>Checkbox</type>
</CustomField>