force-app/main/default/objects/Case/fields/Test_Instance_Name__c.field-meta.xml
<CustomField>
    <fullName>Test_Instance_Name__c</fullName>
    <description>Enter the Instance Name used to test this issue internally to assist with replication</description>
    <label>Test Instance Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tsunami - 12.2.7</fullName>
            </value>
            <value>
                <fullName>Fripp - 12.2.6</fullName>
            </value>
            <value>
                <fullName>Santiago - 12.2.4</fullName>
            </value>
            <value>
                <fullName>Cobain - 12.1.3</fullName>
            </value>
            <value>
                <fullName>Frampton - 12.1.3</fullName>
            </value>
            <value>
                <fullName>Rata - 12.1.3</fullName>
            </value>
            <value>
                <fullName>Tremor - 12.1.3</fullName>
            </value>
            <value>
                <fullName>Geyser - 12.0.6</fullName>
            </value>
            <value>
                <fullName>Totara - 11.5.10</fullName>
            </value>
            <value>
                <fullName>Strata - 11.5.10</fullName>
            </value>
            <value>
                <fullName>Hendrix - Fusion</fullName>
            </value>
            <value>
                <fullName>Horst 11.5.9</fullName>
            </value>
            <value>
                <fullName>Tornado - Vis2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>