force-app/main/default/objects/Case/fields/Test_Log_Completed__c.field-meta.xml
<CustomField>
    <fullName>Test_Log_Completed__c</fullName>
    <description>Prompt to complete the test log</description>
    <inlineHelpText>For Parent &amp; standalone cases only - Ignore for child cases.
Please complete the test log and set this to Yes before closing.</inlineHelpText>
    <label>Test Log Completed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>