force-app/main/default/objects/Case/fields/Webservice__c.field-meta.xml
<CustomField>
    <fullName>Webservice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to identify Cases created via webservice</description>
    <label>Webservice</label>
    <type>Checkbox</type>
</CustomField>