force-app/main/default/objects/Case/fields/Wizard_1__c.field-meta.xml
<CustomField>
    <fullName>Wizard_1__c</fullName>
    <inlineHelpText>Choose the Wizard this case is about.</inlineHelpText>
    <label>Wizard.</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agreement &amp; Funding Wizard</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>AP Invoice Wizard</fullName>
            </value>
            <value>
                <fullName>Application Interface Wizard</fullName>
            </value>
            <value>
                <fullName>AR Invoice API Wizard</fullName>
            </value>
            <value>
                <fullName>AR Invoice Wizard</fullName>
            </value>
            <value>
                <fullName>AR Receipt Wizard</fullName>
            </value>
            <value>
                <fullName>Asset Wizard</fullName>
            </value>
            <value>
                <fullName>Bill of Materials Wizard</fullName>
            </value>
            <value>
                <fullName>Budget Wizard</fullName>
            </value>
            <value>
                <fullName>Common Code</fullName>
            </value>
            <value>
                <fullName>Core Code</fullName>
            </value>
            <value>
                <fullName>Customer Wizard</fullName>
            </value>
            <value>
                <fullName>Custom Query / Downloader</fullName>
            </value>
            <value>
                <fullName>Element Entry Wizard</fullName>
            </value>
            <value>
                <fullName>Employee Wizard</fullName>
            </value>
            <value>
                <fullName>Enterprise Asset Management</fullName>
            </value>
            <value>
                <fullName>Event Wizard</fullName>
            </value>
            <value>
                <fullName>Excel-Out</fullName>
            </value>
            <value>
                <fullName>GL Wizard</fullName>
            </value>
            <value>
                <fullName>Horizon</fullName>
            </value>
            <value>
                <fullName>Intelligent AP Invoice Capture</fullName>
            </value>
            <value>
                <fullName>AP Invoice Wizard - Approval Workflow</fullName>
                <label>Invoice Approval Workflow</label>
            </value>
            <value>
                <fullName>Item Catalog UDA Wizard</fullName>
            </value>
            <value>
                <fullName>Item Cost Wizard</fullName>
            </value>
            <value>
                <fullName>Item Extension Wizard</fullName>
            </value>
            <value>
                <fullName>Item Wizard</fullName>
            </value>
            <value>
                <fullName>Labor Cost Rate Wizard</fullName>
            </value>
            <value>
                <fullName>M4A Cloud Framework</fullName>
            </value>
            <value>
                <fullName>M4A Cloud Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>