force-app/main/default/objects/Case/fields/Wizard_Version__c.field-meta.xml
<CustomField>
    <fullName>Wizard_Version__c</fullName>
    <inlineHelpText>The wizard version that this issue was identified in</inlineHelpText>
    <label>Wizard Version</label>
    <length>30</length>
    <type>Text</type>
</CustomField>