force-app/main/default/objects/Case/recordTypes/ERP_Cloud.recordType-meta.xml
<RecordType>
    <fullName>ERP_Cloud</fullName>
    <active>true</active>
    <businessProcess>Standard</businessProcess>
    <description>Record type used for external ERP Cloud cases</description>
    <label>ERP Cloud</label>
</RecordType>