force-app/main/default/objects/Case/recordTypes/SF.recordType-meta.xml
<RecordType>
    <fullName>SF</fullName>
    <active>true</active>
    <businessProcess>SF</businessProcess>
    <description>Record type used for all portal cases</description>
    <label>SF</label>
</RecordType>