force-app/main/default/objects/Case/validationRules/CommunityStatusRestriction.validationRule-meta.xml
<ValidationRule>
    <fullName>CommunityStatusRestriction</fullName>
    <active>true</active>
    <description>Restricts the Status list to just Open and Closed for Community Users</description>
    <errorConditionFormula>AND(
 NOT(ISPICKVAL(Status,&quot;Open&quot;)),
 NOT(ISPICKVAL(Status,&quot;Closed&quot;)),
 NOT(ISPICKVAL(Status,&quot;New&quot;)),
 OR(
  $Profile.Name = &quot;Portal User&quot;,
  $Profile.Name = &quot;Portal Super User&quot;
 )
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Your options are restricted to Open and Closed only</errorMessage>
</ValidationRule>